--- a/memes/package.json
+++ b/memes/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
@@ -26,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "prettier": "^3.4.2",
+    "typescript": "^5.7.2",
     "vite": "^6.0.1"
   }
 }
