--- a/memes/package.json
+++ b/memes/package.json
@@ -13,13 +13,18 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "gif.js": "^0.2.0",
+    "html2canvas": "^1.4.1",
+    "omggif": "^1.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@types/gif.js": "^0.2.5",
+    "@types/omggif": "^1.0.5",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
