--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Set this to your default branch
+      - main # Set this to your default branch
   workflow_dispatch:
 
 permissions:
@@ -19,8 +19,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: |
+            homepage/package-lock.json
+            memes/package-lock.json
 
       - name: Install homepage dependencies
         working-directory: homepage
@@ -41,6 +44,6 @@ jobs:
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: docs  # The folder containing your built website files
-          branch: docs  # The branch to deploy to
-          clean: true  # Automatically remove deleted files from the deployment branch
+          folder: docs # The folder containing your built website files
+          branch: docs # The branch to deploy to
+          clean: true # Automatically remove deleted files from the deployment branch
