--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -27,7 +27,9 @@ jobs:
             rebrand/package-lock.json
 
       - name: Create docs directory
-        run: mkdir -p docs
+        run: |
+          rm -rf docs
+          mkdir -p docs
 
       - name: Install homepage dependencies
         working-directory: homepage
@@ -38,7 +40,10 @@ jobs:
         run: npm run build
 
       - name: Copy homepage files
-        run: cp -r homepage/dist/* docs/
+        run: |
+          ls -la homepage/dist/
+          cp -rv homepage/dist/* docs/
+          ls -la docs/
 
       - name: Install memes dependencies
         working-directory: memes
@@ -49,7 +54,10 @@ jobs:
         run: npm run build
 
       - name: Copy memes files
-        run: cp -r memes/dist/* docs/
+        run: |
+          ls -la memes/dist/
+          cp -rv memes/dist/* docs/
+          ls -la docs/
 
       - name: Install rebrand dependencies
         working-directory: rebrand
@@ -60,9 +68,12 @@ jobs:
         run: npm run build
 
       - name: Copy rebrand files
-        run: cp -r rebrand/dist/* docs/
+        run: |
+          ls -la rebrand/dist/
+          cp -rv rebrand/dist/* docs/
+          ls -la docs/
 
-      - name: Deploy to GitHub Pages 🚀
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: docs # The folder containing your built website files
